# lsync

./: .gitignore  Cargo.toml  LICENSE  README.md
lib/l10n/: intl_de.arb  intl_en.arb  intl_ja.arb
src/: google_sheet_api_client.rs  main.rs
src/commands/: setup.rs  sync.rs
src/models/: config.rs
src/utils/: constants.rs  dart_generator.rs  env.rs  logging.rs  mod.rs  prompt.rs  required_files.rs  write_arb_files.rs  write_json_files.rs
static/: index.html
