[package]
name = "localyze_sync_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
tiny_http = "0.12"
open = "5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
google-sheets4 = "*"
tokio = { version = "1", features = ["full"] }
hyper-rustls = "0.27.7"
rustls = "0.23.28"
colored = "2.2.0"
hyper = { version = "1", features = ["http1"] }
hyper-util = "0.1.14"
http-body-util = "0.1"
dotenvy = "0.15"